[package]
name = "mob_push"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1" }
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.11" }

once_cell = "1.13.0"